# InfiniDepth

./: .gitignore  DATA.md  INSTALL.md  README.md  app.py  inference_depth.py  inference_gs.py  inference_multi_view_depth.py  main.py  pyproject.toml  requirements.txt
InfiniDepth/: __init__.py
InfiniDepth/gs/: __init__.py  adapter.py  ply.py  predictor.py  projection.py  types.py
InfiniDepth/model/: __init__.py  model.py  registry.py
InfiniDepth/model/block/: __init__.py  config.py  convolution.py  implicit_decoder.py  pe.py  perceive_io.py  rope.py  utils.py
InfiniDepth/utils/: __init__.py  gs_utils.py  hf_demo_utils.py  inference_utils.py  io_utils.py  logger.py  model_utils.py  moge_utils.py  sampling_utils.py  vis_utils.py  warp_utils.py
example_data/depth/: eth3d_office.npz
example_huggingface/: eth3d_kicker_depth.npz  waymo_scene002_depth.npy  waymo_scene495_depth.npy
example_scripts/infer_depth/: camera_infinidepth.sh  courtyard_infinidepth.sh  eth3d_infinidepth.sh  eth3d_infinidepth_dc.sh  eth3d_infinidepth_depthsensor.sh  waymo_infinidepth.sh  waymo_infinidepth_dc.sh  waymo_infinidepth_depthsensor.sh  waymo_multi_view_infinidepth_depthsensor_known_camera.sh
example_scripts/infer_gs/: camera_infinidepth_gs.sh  courtyard_infinidepth_gs.sh  eth3d_infinidepth_dc_gs.sh  eth3d_infinidepth_depthsensor_gs.sh  eth3d_infinidepth_gs.sh  fruit_infinidepth_gs.sh  waymo_infinidepth_dc_gs.sh  waymo_infinidepth_depthsensor_gs.sh  waymo_infinidepth_gs.sh
launch_scripts/eval/: infinidepth.sh  infinidepth_depthsensor.sh
launch_scripts/train/: infinidepth.sh  infinidepth_depthsensor.sh
training/config/: __init__.py  config.py
training/datamodule/: general_datamodule.py
training/datamodule/samplers/: pda.py  pretrain.py  vggt.py
training/dataset/depth_estimation/: depth_estimation_dataset.py  diode.py  eth3d.py  kitti.py  nyu.py  scannet.py  synth4k.py  transform.py  waymo.py
training/dataset/utils/: sampling.py  sampling_np.py
training/entrys/: __init__.py  train_net.py  utils.py  validation.py
training/exp_configs/: default.yaml
training/exp_configs/exps/: infinidepth.yaml  infinidepth_depthsensor.yaml
training/model/: model.py
training/model/depth_estimation/: depth_estimation_model.py  upsample_utils.py
training/utils/: base_utils.py  camera_utils.py  check_utils.py  colmap_scale.py  colmap_utils.py  depth_utils.py  epipolar_utils.py  export_utils.py  geo_transform.py  geo_utils.py  image_utils.py  logger.py  lr_table.py  math_utils.py  matrix.py  mesh_uitils.py  net_utils.py  o3d_utils.py  parallel_utils.py  plt_utils.py  pylogger.py  sampling_np.py  smplx_utils.py  undist_utils.py  vis_utils.py  wis3d_utils.py
training/utils/callbacks/: o3d_vis_motion.py  prog_bar.py  vis_motion.py
training/utils/colmap/: benchmark_eth3d.py  bundler_to_ply.py  crawl_camera_specs.py  database.py  export_inlier_matches.py  export_inlier_pairs.py  export_to_bundler.py  export_to_visualsfm.py  flickr_downloader.py  merge_ply_files.py  migrate_database_pose_prior.py  nvm_to_ply.py  plyfile.py  read_write_dense.py  read_write_fused_vis.py  read_write_model.py  test_read_write_dense.py  test_read_write_fused_vis.py  test_read_write_model.py  visualize_model.py
(+145 files in other folders)
